# Inworld-Skyrim-Mod

./: .gitignore  404.html  README.md  index.html
Client/: .env  .env.example  SkyrimClient.ts  package.json  tsconfig.json
Client/Inworld/: InworldLoginSystem.ts  InworldManager.ts  InworldWorkspaceManager.ts  SkyrimInworldSocketController.ts
Client/Inworld/Audio/: BLCRecorder.ts
Client/Templates/WorldBuilding/: SkyrimCharacters.json  SkyrimKnowledge.json
Client/World/: SkyrimCharacters.json
Papyrus/: InworldConversation.pex
Papyrus/Source/: InworldConversation.psc
SKSE/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FormUtil.cpp  FormUtil.h  PCH.h  PhonemeUtility.cpp  PhonemeUtility.h  ScriptObject.cpp  ScriptObject.h  SocketManager.cpp  cpp.hint  plugin.cpp  vcpkg-configuration.json  vcpkg.json
extend/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
stylesheet/: extra.css
